k8s/app-bulk.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bugbase-bulk-deployment
  labels:
    app: bugbase-bulk
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bugbase-bulk
  template:
    metadata:
      labels:
        app: bugbase-bulk
    spec:
      containers:
        - name: bugbase-bulk
          image: bugbase-bulk
          resources:
            limits:
              memory: 128Mi
              cpu: 500m
          ports:
            - containerPort: 8082
              name: server
          livenessProbe:
            httpGet:
              path: /health/live
              port: server
            initialDelaySeconds: 20
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /health/ready
              port: server
            initialDelaySeconds: 20
            periodSeconds: 5
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: bugbase-bulk-service
spec:
  type: ClusterIP
  selector:
    app: bugbase-bulk
  ports:
    - port: 8082
      protocol: TCP
      targetPort: server
