k8s/app-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bugbase-ingress-deployment
  labels:
    app: bugbase-ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bugbase-ingress
  template:
    metadata:
      labels:
        app: bugbase-ingress
    spec:
      containers:
        - name: bugbase-ingress
          image: bugbase-ingress
          resources:
            limits:
              memory: 128Mi
              cpu: 500m
          ports:
            - containerPort: 8083
              name: server
          livenessProbe:
            httpGet:
              path: /health/live
              port: server
            initialDelaySeconds: 20
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /health/ready
              port: server
            initialDelaySeconds: 20
            periodSeconds: 5
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: bugbase-ingress-service
spec:
  type: ClusterIP
  selector:
    app: bugbase-ingress
  ports:
    - port: 8083
      protocol: TCP
      targetPort: server
