k8s/app-issue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bugbase-issue
  labels:
    app: bugbase-issue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bugbase-issue
  template:
    metadata:
      labels:
        app: bugbase-issue
    spec:
      containers:
        - name: bugbase-issue
          image: bugbase-issue
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            # TODO: KeyValue store
            - containerPort: 8080
              name: server
          # TODO: healthcheck
          livenessProbe:
            httpGet:
              path: /health/live
              port: server
            initialDelaySeconds: 20
            periodSeconds: 5
          # TODO: healthcheck
          readinessProbe:
            httpGet:
              path: /health/ready
              port: server
            initialDelaySeconds: 20
            periodSeconds: 5
          # TODO: KeyValue store
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: bugbase-issue
spec:
  type: NodePort
  selector:
    app: bugbase-issue
  ports:
    # TODO: KeyValue store
    - port: 8080
      protocol: TCP
      targetPort: server
