k8s/app-login.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bugbase-login-deployment
  labels:
    app: bugbase-login
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bugbase-login
  template:
    metadata:
      labels:
        app: bugbase-login
    spec:
      containers:
        - name: bugbase-login
          image: bugbase-login
          resources:
            limits:
              memory: 128Mi
              cpu: 500m
          ports:
            - containerPort: 8084
              name: server
          livenessProbe:
            httpGet:
              path: /health/live
              port: server
            initialDelaySeconds: 20
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /health/ready
              port: server
            initialDelaySeconds: 20
            periodSeconds: 5
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: bugbase-login-service
spec:
  type: ClusterIP
  selector:
    app: bugbase-login
  ports:
    - port: 8084
      protocol: TCP
      targetPort: server
