k8s/app-static.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bugbase-static-deployment
  labels:
    app: bugbase-static
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bugbase-static
  template:
    metadata:
      labels:
        app: bugbase-static
    spec:
      containers:
        - name: bugbase-static
          image: ghcr.io/rsopms/bugbase-static
          ports:
            - containerPort: 8081
              name: server
          livenessProbe:
            httpGet:
              path: /health/live
              port: server
            initialDelaySeconds: 20
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /health/ready
              port: server
            initialDelaySeconds: 20
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: bugbase-static-service
spec:
  type: ClusterIP
  selector:
    app: bugbase-static
  ports:
    - port: 8081
      protocol: TCP
      targetPort: server
