k8s/database.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bugbase-database-deployment
  labels:
    app: bugbase-database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bugbase-database
  template:
    metadata:
      labels:
        app: bugbase-database
    spec:
      containers:
        - name: bugbase-database
          image: bugbase-database
          resources:
            limits:
              memory: 128Mi
              cpu: 500m
          ports:
            # TODO: KeyValue store
            - containerPort: 5432
              name: dbport
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgresdata
          imagePullPolicy: Never
      volumes:
        - name: postgresdata
          persistentVolumeClaim:
            claimName: bugbase-database-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: bugbase-database-service
spec:
  type: ClusterIP
  selector:
    app: bugbase-database
  ports:
    - port: 5432
      protocol: TCP
      targetPort: 5432
