k8s/nats.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats-server
  labels:
    app: nats
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nats
  template:
    metadata:
      labels:
        app: nats
    spec:
      containers:
      - name: nats
        image: nats:latest
        ports:
        - containerPort: 4222 # NATS client port
        - containerPort: 8222 # NATS monitoring port
---
apiVersion: v1
kind: Service
metadata:
  name: nats-service
  labels:
    app: nats
spec:
  type: ClusterIP
  selector:
    app: nats
  ports:
  - name: client
    protocol: TCP
    port: 4222
    targetPort: 4222
  - name: monitoring
    protocol: TCP
    port: 8222
    targetPort: 8222
