k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bugbase-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /issue(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: bugbase-issue-service
                port:
                  number: 8080
          - path: /()(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: bugbase-static-service
                port:
                  number: 8081
          - path: /bulk(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: bugbase-bulk-service
                port:
                  number: 8082
          - path: /ingress(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: bugbase-ingress-service
                port:
                  number: 8083
          - path: /login(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: bugbase-login-service
                port:
                  number: 8084
